web/kube/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: finalechat
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: dreamfacelab/finalechat-web:latest
          imagePullPolicy: Always
          command: ["npm", "run", "start"]
          ports:
            - containerPort: 3000
