web/kube/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: finalechat
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: web
